--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -291,6 +291,7 @@ licensify::apps::licensify_feed::environment: 'production'
 monitoring::checks::aws_origin_domain: "production.govuk.digital"
 monitoring::checks::datagovuk_publish::ensure: 'present'
 monitoring::checks::datagovuk_publish::host: 'publish-data-beta-production.cloudapps.digital'
+monitoring::checks::sidekiq::enable_signon_check: false
 monitoring::checks::sidekiq::enable_support_check: false
 monitoring::checks::ses::region: 'eu-west-1'
 monitoring::checks::rds::region: 'eu-west-1'
