--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -269,6 +269,7 @@ licensify::apps::licensify::alert_5xx_critical_rate: 0.15
 monitoring::checks::aws_origin_domain: "staging.govuk.digital"
 monitoring::checks::datagovuk_publish::ensure: 'present'
 monitoring::checks::datagovuk_publish::host: 'publish-data-beta-staging.cloudapps.digital'
+monitoring::checks::sidekiq::enable_signon_check: false
 monitoring::checks::sidekiq::enable_support_check: false
 monitoring::checks::ses::region: 'eu-west-1'
 monitoring::checks::rds::region: 'eu-west-1'
