--- a/hieradata_aws/class/integration/search.yaml
+++ b/hieradata_aws/class/integration/search.yaml
@@ -1,6 +1,6 @@
 govuk_env_sync::tasks:
   "pull_es_everything_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "3"
     minute: "24"
     action: "pull"
@@ -11,7 +11,7 @@ govuk_env_sync::tasks:
     url: "govuk-staging"
     path: "elasticsearch5"
   "push_es_everything_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "4"
     minute: "24"
     action: "push"
