--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -223,6 +223,7 @@ users::usernames:
   - callumknights
   - camilledescartes
   - chrisbanks
+  - christopherashton
   - christopherbaines
   - chrisfarmiloe
   - deanwilson
