Consolidate the remaining Carrenza link-checker-api hieradata
In the development.yaml file, as this is the remaining place it could
be applicable.

--- a/hieradata/development.yaml
+++ b/hieradata/development.yaml
@@ -151,9 +151,16 @@ govuk::apps::imminence::enable_procfile_worker: false
 govuk::apps::imminence::redis_host: 'localhost'
 govuk::apps::licencefinder::mongodb_nodes: ['localhost']
 govuk::apps::manuals_frontend::enable_running_in_draft_mode::content_store: 'http://draft-content-store.dev.gov.uk'
+
+govuk::apps::link_checker_api::db_hostname: "postgresql-primary-1.backend"
+govuk::apps::link_checker_api::db_port: 6432
+govuk::apps::link_checker_api::db_allow_prepared_statements: false
+govuk::apps::link_checker_api::db::backend_ip_range: "%{hiera('environment_ip_prefix')}.3.0/24"
+govuk::apps::link_checker_api::redis_port: "%{hiera('sidekiq_port')}"
 govuk::apps::link_checker_api::enable_procfile_worker: false
 govuk::apps::link_checker_api::enabled: true
 govuk::apps::link_checker_api::redis_host: "%{hiera('sidekiq_host')}"
+
 govuk::apps::manuals_publisher::enable_procfile_worker: false
 govuk::apps::manuals_publisher::mongodb_nodes: ['localhost']
 govuk::apps::manuals_publisher::mongodb_name: 'manuals_publisher_development'
