--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -6,6 +6,7 @@ nginx_enable_ssl: false
 
 stackname: "%{::aws_stackname}"
 app_domain: "%{::aws_stackname}.govuk.internal"
+app_domain_internal: '%{::aws_stackname}.govuk-internal.digital'
 
 backup::mysql::alert_hostname: 'alert'
 
