Set puppet::puppetdb::database_password in hieradata_aws/common.yaml
This is set in the Carrenza hieradata/ directory, so do the same for
the AWS hieradata. Node class tests for the puppetmaster using the AWS
hieradata fail without this being set.

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -1179,6 +1179,7 @@ postgresql::lib::devel::link_pg_config: false
 postgresql::globals::version: '9.3'
 
 puppet::puppetserver::puppetdb_version: '2.0.0-1puppetlabs1'
+puppet::puppetdb::database_password: ''
 
 puppet::monitoring::alert_hostname: 'alert'
 
