Stop smokey-loop while the data sync is in progress
This is because it makes a lot of requests to Whitehall while it's not
in a state that can recieve requests.

This only applies to integration, staging and training.

--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -361,6 +361,7 @@ monitoring::checks::lb::loadbalancers:
 
 monitoring::checks::cache::region: 'eu-west-1'
 monitoring::checks::smokey::environment: 'integration'
+monitoring::checks::smokey::disable_during_data_sync: true
 monitoring::uptime_collector::environment: 'integration'
 monitoring::contacts::slack_username: 'Integration'
 
