--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -192,6 +192,7 @@ monitoring::checks::sidekiq::enable_support_check: false
 monitoring::checks::pingdom::enable: false
 monitoring::checks::ses::region: eu-west-1
 monitoring::checks::smokey::environment: 'integration'
+monitoring::checks::smokey::disable_during_data_sync: true
 monitoring::uptime_collector::environment: 'integration'
 monitoring::contacts::slack_username: 'CI'
 
