--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -504,6 +504,7 @@ monitoring::checks::aws_origin_domain: "staging.govuk.digital"
 monitoring::checks::sidekiq::enable_support_check: false
 monitoring::checks::ses::region: eu-west-1
 monitoring::checks::smokey::environment: 'staging'
+monitoring::checks::smokey::disable_during_data_sync: true
 monitoring::uptime_collector::environment: 'staging'
 monitoring::contacts::notify_slack: true
 monitoring::contacts::slack_channel: '#govuk-alerts-staging'
