--- a/hieradata_aws/training.yaml
+++ b/hieradata_aws/training.yaml
@@ -160,6 +160,7 @@ monitoring::checks::ses::region: 'eu-west-2'
 monitoring::checks::rds::region: 'eu-west-2'
 monitoring::checks::cache::region: 'eu-west-2'
 monitoring::checks::smokey::environment: 'training'
+monitoring::checks::smokey::disable_during_data_sync: true
 monitoring::uptime_collector::environment: 'training'
 
 postfix::smarthost:
