--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -67,6 +67,10 @@ node_class: &node_class
       - service-manual-frontend
       - smartanswers
       - static
+  email_alert_api:
+    apps:
+      - email-alert-api
+      - email-alert-service
   frontend:
     apps:
       - canary-frontend
