--- a/modules/nginx/files/etc/nginx/ssl.conf
+++ b/modules/nginx/files/etc/nginx/ssl.conf
@@ -6,10 +6,8 @@ proxy_set_header          X-Forwarded-Ssl on;
 ssl_protocols             TLSv1 TLSv1.1 TLSv1.2;
 ssl_ciphers               HIGH:!ADH:!kEDH:!aNULL;
 ssl_prefer_server_ciphers on;
-
-# FIXME: SSL session cache directives have been moved to nginx.conf as
-# a workaround for http://trac.nginx.org/nginx/ticket/235
-
+ssl_session_cache         shared:SSL:10m;
+ssl_session_timeout       5m;
 # max-age=31536000 commits to using HSTS for one year
 # NB: www.gov.uk is on the Chromium (and hence Mozilla) HSTS preload list
 #     http://src.chromium.org/viewvc/chrome?view=revision&revision=168524
