--- a/hieradata/node/postgresql-primary-1.backend.publishing.service.gov.uk.yaml
+++ b/hieradata/node/postgresql-primary-1.backend.publishing.service.gov.uk.yaml
@@ -1,8 +1,20 @@
 govuk_env_sync::tasks:
+  "push_email_alert_api_production_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "01"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "email-alert-api_production"
+    temppath: "/var/lib/autopostgresqlbackup/email-alert-api_production"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
+govuk_env_sync::tasks:
   "push_publishing_api_production_daily":
     ensure: "present"
     hour: "2"
-    minute: "20"
+    minute: "30"
     action: "push"
     dbms: "postgresql"
     storagebackend: "s3"
