--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -194,6 +194,8 @@ govuk_jenkins::jobs::network_config_deploy::environments:
 govuk_jenkins::jobs::search_fetch_analytics_data::skip_page_traffic_load: true
 govuk_jenkins::jobs::search_fetch_analytics_data::cron_schedule: '30 8 * * 1-5'
 
+govuk_jenkins::jobs::search_relevancy_rank_evaluation::cron_schedule: '45 */3 * * *' # every three hours
+
 govuk_jenkins::jobs::smokey::environment: staging_aws
 
 govuk_jenkins::jobs::data_sync_complete_staging::signon_domains_to_migrate:
