--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -136,6 +136,7 @@ govuk_jenkins::jobs::search_test_spelling_suggestions::cron_schedule: '0 10 * * 
 govuk_jenkins::jobs::search_api_fetch_analytics_data::skip_page_traffic_load: true
 govuk_jenkins::jobs::search_api_fetch_analytics_data::cron_schedule: '30 9 * * 1-5'
 
+govuk_jenkins::jobs::search_relevancy_rank_evaluation::cron_schedule: '45 */3 * * *' # every three hours
 # Integration doesn't have a mirror
 govuk_jenkins::jobs::update_cdn_dictionaries::allow_deploy_to_mirror: false
 
