--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -226,6 +226,8 @@ govuk_jenkins::jobs::deploy_emergency_banner::clear_cdn_cache: true
 govuk_jenkins::jobs::search_fetch_analytics_data::skip_page_traffic_load: true
 govuk_jenkins::jobs::search_fetch_analytics_data::cron_schedule: '30 8 * * 1-5'
 
+govuk_jenkins::jobs::search_relevancy_rank_evaluation::cron_schedule: '45 */3 * * *' # every three hours
+
 govuk_jenkins::jobs::smokey::environment: production_aws
 
 govuk_jenkins::jobs::data_sync_complete_production::signon_domains_to_migrate:
