Move the Support Sidekiq check to AWS
As Support is now running in AWS.

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1305,6 +1305,7 @@ mongodb::server::version: '2.4.9'
 monitoring::checks::aws_origin_domain: 'dev.govuk.digital'
 monitoring::checks::http_username: "%{hiera('http_username')}"
 monitoring::checks::http_password: "%{hiera('http_password')}"
+monitoring::checks::sidekiq::enable_support_check: false
 monitoring::contacts::slack_icinga_status_cgi_url: "https://alert.%{hiera('app_domain')}/cgi-bin/icinga/status.cgi"
 monitoring::contacts::slack_icinga_extinfo_cgi_url: "https://alert.%{hiera('app_domain')}/cgi-bin/icinga/extinfo.cgi"
 
