Selectively run the Whitehall overdue check in office hours
In Staging and Integration, to avoid it running when Whitehall is down
due to the datasync, as this leads to errors in Sentry as well as
monitoring noise.

--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -407,6 +407,7 @@ licensify::apps::licensify::alert_5xx_warning_rate: 0.1
 licensify::apps::licensify::alert_5xx_critical_rate: 0.15
 
 monitoring::checks::aws_origin_domain: "staging.govuk.digital"
+monitoring::checks::whitehall_overdue_check_period: 'inoffice'
 monitoring::checks::ses::region: eu-west-1
 monitoring::checks::smokey::environment: 'staging'
 monitoring::checks::smokey::disable_during_data_sync: true
