--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -326,6 +326,7 @@ grafana::dashboards::application_dashboards:
 mongodb::backup::mongo_backup_node: 'localhost'
 
 monitoring::checks::aws_origin_domain: "integration.govuk.digital"
+monitoring::checks::whitehall_overdue_check_period: 'inoffice'
 monitoring::checks::sidekiq::enable_support_check: false
 monitoring::checks::pingdom::enable: false
 monitoring::checks::ses::region: 'eu-west-1'
