--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -275,6 +275,7 @@ licensify::apps::licensify::alert_5xx_warning_rate: 0.1
 licensify::apps::licensify::alert_5xx_critical_rate: 0.15
 
 monitoring::checks::aws_origin_domain: "staging.govuk.digital"
+monitoring::checks::whitehall_overdue_check_period: 'inoffice'
 monitoring::checks::datagovuk_publish::ensure: 'present'
 monitoring::checks::datagovuk_publish::host: 'publish-data-beta-staging.cloudapps.digital'
 monitoring::checks::sidekiq::enable_signon_check: false
