--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -669,6 +669,7 @@ govuk_ci::master::pipeline_jobs:
   rack-logstasher: {}
   rails_translation_manager: {}
   router-data: {}
+  rubocop-govuk: {}
   seal: {}
   search-api: {}
   shared_mustache: {}
