Run Search GA data load every six hours
This will load click through data in all environments
from GA into graphite every six hours.

Search team will get notified if it fails:
Prior art: https://github.com/alphagov/govuk-puppet/pull/9741

Trello: https://trello.com/c/wiMR3foo/1095

--- a/hieradata_aws/class/production/jenkins.yaml
+++ b/hieradata_aws/class/production/jenkins.yaml
@@ -29,6 +29,7 @@ govuk_jenkins::job_builder::jobs:
   - govuk_jenkins::jobs::search_api_reindex_with_new_schema
   - govuk_jenkins::jobs::search_generate_sitemaps
   - govuk_jenkins::jobs::search_relevancy_rank_evaluation
+  - govuk_jenkins::jobs::search_google_analytics_etl
   - govuk_jenkins::jobs::smokey
   - govuk_jenkins::jobs::smokey_deploy
   - govuk_jenkins::jobs::transition_import_dns
