--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -313,6 +313,8 @@ hosts::production::backend::app_hostnames:
   - 'content-publisher'
   - 'content-tagger'
   - 'docs'
+  - 'email-alert-api'
+  - 'email-alert-api-public'
   - 'hmrc-manuals-api'
   - 'kibana'
   - 'maslow'
