--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -318,6 +318,7 @@ hosts::production::backend::app_hostnames:
   - 'maslow'
   - 'manuals-publisher'
   - 'publisher'
+  - 'publishing-api'
   - 'search-admin'
   - 'service-manual-publisher'
   - 'short-url-manager'
