--- a/hieradata_aws/training.yaml
+++ b/hieradata_aws/training.yaml
@@ -146,6 +146,7 @@ monitoring::checks::pingdom::enable: false
 monitoring::checks::ses::region: 'eu-west-2'
 monitoring::checks::rds::region: 'eu-west-2'
 monitoring::checks::cache::region: 'eu-west-2'
+monitoring::checks::aws_iam_key::region: 'eu-west-2'
 monitoring::checks::smokey::environment: 'training'
 monitoring::checks::smokey::disable_during_data_sync: true
 monitoring::uptime_collector::environment: 'training'
